GAP FIX ON OUR STORY AND ON STORE LOCATOR

--- a/assets/store-locator.css
+++ b/assets/store-locator.css
@@ -12,7 +12,7 @@ h1.main-page-title.page-title{
   font-size: 32px !important;
   margin-bottom: 24px !important;
   text-align: left !important;
-  padding-top: 140px !important;
+  padding-top: 80px !important;
   padding-bottom: 0px !important;
 }
 .stockist-search-filters{
